--- a/src/App.css
+++ b/src/App.css
@@ -25,32 +25,27 @@
   font-size: 15px;
   margin: 7% 5% 5% 5%;
   align-items: center;
-  width: 80%;
-  
+  border-bottom: 1.5px groove black;  
 }
 .card-demographics{
   display: flex;
   justify-content: left;
   padding-top: 10px;
   align-items: center;
-  border: black;
-  border-style: solid;
-  padding-left: 5%;
+  padding-left: 2%;
+  gap: 10px;
 
 }
 .card-image{
   border-radius: 5px;
-  height: 100% ;
-  padding-left: 20px;
-  border: red;
-  border-style: solid;
+  width: auto;
+  width: 90%;
 }
 
 .card-info{
   padding-left: 10px;
   padding-bottom: 20px;
-  border: black;
-  border-style: solid;
+
   align-items: center;
   max-width: 70%;
 
@@ -63,21 +58,26 @@
   gap: 10px;
   overflow: hidden;
   text-overflow: ellipsis;
-  border: black;
-  border-style: solid;
   margin: 0px;
+  padding-left: 2%;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: 30px;
 }
 
 .card-location{
+
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 .card-contents{
-  border: black;
-  border-style: solid;
-  
+  padding-left: 2%;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif  
 }
 .card-date{
-  border: black;
-  border-style: solid;
-  
+  padding-left: 2%;
+  font-family: 'Inter';
+  font-style: normal;
+}
+
+.map-logo{
+  max-height: 20px;
 }
